# Chat-Vault

./: COMMERCIAL-LICENSE.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  parse_turn_original.rs  turns_to_jsonl_rows_original.rs
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_info.rs  export.rs  export_md.rs  import.rs  lib.rs  main.rs  media.rs  protocol.rs  scheduler.rs  search.rs  settings.rs  storage.rs  sync.rs  turn_parser.rs  worker_host.rs
src-tauri/src/cookies/: chrome_decrypt.rs  discover.rs  keychain_diag.rs  list_accounts.rs  mod.rs  webview_cookies.rs
src-tauri/src/gemini_api/: api.rs  batchexecute.rs  http_client.rs  media_download.rs  mod.rs
src-tauri/tests/: api_integration.rs
src/components/: AccountPicker.tsx  ChatView.tsx  Icons.tsx  LockScreen.tsx  ResearchDetailModal.tsx  SettingsModal.tsx  Sidebar.tsx  TopBar.tsx
src/components/modals/: ClearConfirmModal.tsx  ExportModal.tsx  NoticeModal.tsx  SyncOverlay.tsx
src/data/: types.ts
src/utils/: exportUtils.ts
