[package]
name = "gemini-collector"
version = "2.0.7"
description = "Back up Google Gemini conversations and AI-generated media locally"
authors = ["FirenzeLor"]
license = "AGPL-3.0-only"
repository = "https://github.com/FirenzeLor/gemini-collector"
edition = "2021"
default-run = "gemini-collector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gemini_collector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cookie-verify"
path = "src/bin/cookie_verify.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
zip = "2"
tantivy = "0.22"
anyhow = "1"

# cookies module dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
lz4_flex = "0.11"
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha1 = "0.10"

# protocol + storage module dependencies
regex = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
url = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "zstd"], default-features = false }

# gemini_api module dependencies
rand = "0.9"

# worker / export_cli module dependencies
arc-swap = "1"
log = "0.4"
tauri-plugin-log = "2"

# cookie-verify binary needs a tokio runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography"] }
webview2-com = "0.38"
windows-core = "0.61"

[dev-dependencies]
tempfile = "3"
